--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "phpbb-extension",
 	"description": "Adds a scroll to top button making it easy to return to the top of a page.",
 	"homepage": "https://github.com/VSEphpbb/scrolltotop",
-	"version": "1.0.0-dev",
+	"version": "1.0.0-b1",
 	"license": "GPL-2.0",
 	"authors": [
 		{
@@ -20,6 +20,11 @@
 		"display-name": "Scroll To Top",
 		"soft-require": {
 			"phpbb/phpbb": ">=3.1.0-RC3,<3.2.*@dev"
+		},
+		"version-check": {
+			"host": "vsephpbb.github.io",
+			"directory": "/scrolltotop",
+			"filename": "version.json"
 		}
 	}
 }
