--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "phpbb-extension",
 	"description": "A phpBB 3.1 extension that adds a scroll to top button making it easy to return to the top of a page.",
 	"homepage": "https://github.com/VSEphpbb/scrolltotop",
-	"version": "1.0.0-b1",
+	"version": "1.0.0",
 	"license": "GPL-2.0",
 	"authors": [
 		{
