--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
 	"license": "GPL-2.0-only",
 	"authors": [
 		{
-			"name": "Matt Friedman (VSE)",
-			"homepage": "http://mattfriedman.me",
+			"name": "Matt Friedman",
+			"homepage": "http://vsephpbb.github.io",
 			"role": "Developer"
 		}
 	],
